--- a/house-price-prediction.ipynb
+++ b/house-price-prediction.ipynb
@@ -479,11 +479,12 @@
     "from sklearn.metrics import *\n",
     "\n",
     "def evaluate(model):\n",
-    "    train_preds = model.predict(df_test)\n",
+    "    test_preds = model.predict(df_test)\n",
     "    scores = {\n",
-    "        \"Training MAE\": mean_absolute_error(y_train, train_preds),\n",
-    "        \"Training MSLE\": mean_squared_log_error(y_train, train_preds),\n",
-    "        \"Training R^2\": r2_score(y_train, train_preds),\n",
+    "        \"Test RMSE\": np.sqrt(mean_squared_error(y_train, test_preds)),\n",
+    "        \"Test MAE\": mean_absolute_error(y_train, test_preds),\n",
+    "        \"Test MSLE\": mean_squared_log_error(y_train, test_preds),\n",
+    "        \"Test R^2\": r2_score(y_train, test_preds),\n",
     "    }\n",
     "    return scores"
    ]
@@ -593,6 +594,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "455dba5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "\n",
+    "reg = XGBRegressor()\n",
+    "reg.fit(df_housing_prepared_train,y_train)\n",
+    "\n",
+    "print(evaluate(reg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec42b268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPRegressor\n",
+    "\n",
+    "reg = MLPRegressor(random_state=1, max_iter=500).fit(df_housing_prepared_train,y_train)\n",
+    "\n",
+    "print(evaluate(reg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d89b5a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import AdaBoostRegressor\n",
+    "\n",
+    "reg= AdaBoostRegressor().fit(df_housing_prepared_train,y_train)\n",
+    "\n",
+    "print(evaluate(reg))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "33f26d97",
    "metadata": {},
@@ -600,6 +644,50 @@
     "## Tuning the prameters\n",
     "### Our best performing models are XGBOOST & RFR so we will tune this two"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eece7aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "parameter_space = \\\n",
+    "{\n",
+    "\"max_depth\": [4, 5, 6, 7],\n",
+    "\"learning_rate\": [0.005, 0.01 ,0.1, 1],\n",
+    "\"n_estimators\": [700, 1000, 2500, 3000],\n",
+    "\"booster\": [\"gbtree\",],\n",
+    "\"gamma\": [7, 25, 100,200],\n",
+    "\"subsample\": [0.3, 0.6, 1],\n",
+    "\"colsample_bytree\": [0.5, 0.7,2],\n",
+    "\"colsample_bylevel\": [0.5, 0.7,3],\n",
+    "\"reg_alpha\": [0.5, 1, 10, 33,100],\n",
+    "\"reg_lambda\": [1, 3, 10,25],\n",
+    "}\n",
+    "reg = RandomizedSearchCV(XGBRegressor(random_state=3),\n",
+    "parameter_space, cv=5, n_jobs=-1,\n",
+    "scoring=\"neg_mean_squared_error\",\n",
+    "random_state=3, n_iter=20)\n",
+    "\n",
+    "reg.fit(df_housing_prepared_train,y_train)\n",
+    "\n",
+    "print(reg.best_params_)\n",
+    "regXGBR= XGBRegressor(**reg.best_params_)\n",
+    "regXGBR.fit(df_housing_prepared_train,y_train)\n",
+    "\n",
+    "print(evaluate(regXGBR))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d6d757b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
